# DDMajor

./: .gitignore  README.md  config.sample.json  pyproject.toml
ddmajor/: DDMajor.py  __init__.py  cli.py  credential.py  logging.py
ddmajor/component/: DDMajorInterface.py  keynote.py  live_asr.py  live_stt.py
tools/: asr_vocabulary.py
